fix parameter number and order for settle and revers action order to right to left for spacing between

--- a/styles/action.css
+++ b/styles/action.css
@@ -17,7 +17,7 @@
     height: auto;
     background: #dddddd;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-content: space-evenly;
     justify-content: space-between;
     padding: 0;
